--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,21 @@ jobs:
       - checkout
 
       - run:
-          name: Install awscli
-          command: sudo pip install awscli
+          name: Install dependencies
+          command: |
+            sudo pip install awscli
+            sudo pip install aws-sam-cli
+            sudo pip install coverage
       
       - run:
-          name: Install SAM
-          command: sudo pip install aws-sam-cli
+          name: Run tests
+          working_directory: src/tests/unit
+          command: coverage run -m unittest discover
+        
+      - run:
+          name: Run coverage report
+          working_directory: src/tests/unit
+          command: coverage report -m
 
       - run: 
           name: Deploy with SAM
