--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,4 @@ jobs:
 
       - run: 
           name: Deploy with SAM
-          command: sam deploy --s3-bucket ses-email-app --stack-name receive-email --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides EmailBucketName=ses-email-replies EmailDomain=$EMAIL_DOMAIN EmailAddress=$EMAIL_ADDRESS
+          command: sam deploy --s3-bucket ses-email-app --stack-name receive-email --region us-east-1 --capabilities CAPABILITY_IAM --parameter-overrides EmailBucketName=$EMAIL_BUCKET_NAME EmailDomain=$EMAIL_DOMAIN EmailAddress=$EMAIL_ADDRESS
